gitops/platform/layers/networking/values/gateway-resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: nginx-gateway-fabric
spec:
  gatewayClassName: nginx
  listeners:
    - name: https-test
      port: 443
      protocol: HTTPS
      hostname: "test-ca.atlas"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: test-ca-cert
    - name: https-grafana
      port: 443
      protocol: HTTPS
      hostname: "grafana.atlas"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-cert
    - name: https-vault
      port: 443
      protocol: HTTPS
      hostname: "vault.atlas"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-cert
    - name: https-s3
      port: 443
      protocol: HTTPS
      hostname: "s3.atlas"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: minio-cert
